<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Train</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="Email">Enter your Email</string>
    <string name="pass">enter your password</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="MyClass">Class</string>
    <string name="prompt">Choose a city</string>
    <string name="prompt1">Choose a class</string>
    <string name="Button">Confirm</string>

    <string-array name="city_array">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>Assiut</item>
        <item>Giza</item>
        <item>Sharm El Sheik</item>
        <item>Aswan</item>
        <item>Matrouh</item>
        <item>Sharkia</item>
        <item>Bani Swef</item>
    </string-array>
    <string-array name="class_array">
        <item>first</item>
        <item>second</item>
        <item>third</item>
    </string-array>

    <string name="title_activity_book">Book</string>
    <string name="title_activity_show_tickets">ShowTickets</string>
    <string name="title_activity_log_out">LogOUt</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_signupp">Signupp</string>

</resources>
